fix invisible text and button in log on digital

--- a/src/css/GameXBody.scss
+++ b/src/css/GameXBody.scss
@@ -697,6 +697,13 @@
   background-size: contain;
 }
 
+.mcompact .movestamp {
+  color: gray;
+}
+.mcompact .bgabutton_gray {
+  background-color: gray;
+}
+
 
 #page-title .token_img, .head_infomsg_item .token_img {
   width: 30px;
