--- a/terraformingmars.css
+++ b/terraformingmars.css
@@ -9655,6 +9655,14 @@ html[lang=ar].mcompact #ebd-body.mobile_portrait .award_label {
   background-size: contain;
 }
 
+.mcompact .movestamp {
+  color: gray;
+}
+
+.mcompact .bgabutton_gray {
+  background-color: gray;
+}
+
 #page-title .token_img, .head_infomsg_item .token_img {
   width: 30px;
   height: 30px;
